<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_black_24"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/baseline_search_black_24"/>

        <item
            android:id="@+id/nav_upcoming"
            android:title="@string/upcoming"
            android:icon="@drawable/baseline_calendar_today_black_24" />

        <item
            android:id="@+id/nav_favorite"
            android:title="@string/favourite"
            android:icon="@drawable/baseline_star_rate_black_24" />

    </group>

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/setting"
                android:icon="@drawable/baseline_settings_black_24" />
        </menu>
    </item>

</menu>
